added some comments

--- a/index.html
+++ b/index.html
@@ -102,11 +102,11 @@
             <section>
                 <h2>Web Standards</h2>
                 <ul>
-                    <li><a href='tutorial/web-standards/0.html'>Example 0</a></li>
-                    <li><a href='tutorial/web-standards/1.html'>Example 1</a></li>
-                    <li><a href='tutorial/web-standards/2a.html'>Example 2a</a></li>
-                    <li><a href='tutorial/web-standards/2b.html'>Example 2b</a></li>
-                    <li><a href='tutorial/web-standards/3.html'>Example 3</a></li>
+                    <li><a href='tutorial/web-standards/0.html'>Example 0: HTML</a></li>
+                    <li><a href='tutorial/web-standards/1.html'>Example 1: CSS</a></li>
+                    <li><a href='tutorial/web-standards/2a.html'>Example 2a: JS Selection</a></li>
+                    <li><a href='tutorial/web-standards/2b.html'>Example 2b: D3 Selection</a></li>
+                    <li><a href='tutorial/web-standards/3.html'>Example 3: SVG</a></li>
                 </ul>
             </section>
 
