added todo and modifications from pres feedback

--- a/index.html
+++ b/index.html
@@ -63,9 +63,13 @@
             content: url(img/dom.gif); /* no need for qoutes */
             display: block;
             position: absolute;
-            left: 25px; /* change this value to one that suits you */
+            left: 0px; /* change this value to one that suits you */
             top: 25px; /* change this value to one that suits you */
             border: 2px solid black;
+        }
+
+        a:visited {
+            color: #0000EE;
         }
         </style>
     </head>
@@ -92,8 +96,8 @@
             <section>
                 <h2>What to Aspire to</h2>
                 <ul>
-                    <li><a href='http://www.nytimes.com/interactive/2012/02/13/us/politics/2013-budget-proposal-graphic.html'>Obama's Budget Proposal</a></li>
                     <li><a href='http://www.nytimes.com/interactive/2012/11/02/us/politics/paths-to-the-white-house.html'>Paths to the White House</a></li>
+                    <li><a href='http://www.nytimes.com/interactive/2014/06/20/sports/worldcup/how-world-cup-players-are-connected.html'>The Clubs that Connect the World Cup</a></li>
                     <li><a href='http://bl.ocks.org/mbostock/061b3929ba0f3964d335'>Maze Tree</a></li>
                     <li><a href='http://bl.ocks.org/mbostock/267208068dbb75285114'>Spiral Triangle</a></li>
                 </ul>
