--- a/tutorial/web-standards/2a.html
+++ b/tutorial/web-standards/2a.html
@@ -9,16 +9,14 @@
 		</style>
 	</head>
 	<body>
-		<div id='title'>
-			<h1>Hello World!</h1>
+		<div id='header'>
+			<h1 class='subheading'>Hello World!</h1>
+			<h2 class='subheading'>From Zillow</h2>
 		</div>
 		<script>
 
 			// Pre-2011 Javascript
 			var clickMe = document.getElementById('title');
-
-			// CSS3 Selector
-			var clickMe = document.querySelector('#title');
 			
 			clickMe.onclick = function() {
 				this.style.backgroundColor = 'black';
