--- a/tutorial/web-standards/2a.html
+++ b/tutorial/web-standards/2a.html
@@ -2,27 +2,24 @@
 <html>
 	<head>
 		<style>
-			h1 {
+			.heading {
 				font-size: 24px;
-				color: blue;
+				color: orange;
 			}
 		</style>
 	</head>
 	<body>
 		<div id='header'>
-			<h1 class='subheading'>Hello World!</h1>
-			<h2 class='subheading'>From Zillow</h2>
+			<h1 class='heading'>Hello World!</h1>
+			<h2 class='heading'>From Zillow</h2>
 		</div>
+		
 		<script>
-
-			// Pre-2011 Javascript
-			var clickMe = document.getElementById('title');
+			var clickMe = document.getElementById('header');
 			
 			clickMe.onclick = function() {
-				this.style.backgroundColor = 'black';
+				this.style.backgroundColor = 'steelblue';
 			};
-
-
 		</script>
 	</body>
 </html>
