added coord system image

--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
 
             <section>
                 <h2>Scatterplot</h2>
+                <p><a href='img/svg-coord-system.png'>SVG Coordinate System</a></p>
                 <ul>
                     <li><a href='tutorial/scatterplot/0.html'>Example 0</a></li>
                     <li><a href='tutorial/scatterplot/1a.html'>Example 1a</a></li>
