--- a/tutorial/scatterplot/0.html
+++ b/tutorial/scatterplot/0.html
@@ -48,7 +48,7 @@
 	-->
 
 	<svg width='600' height='400'>
-    <g transform='translate(40,20)'> <!-- container used to group objects -->
+    <g transform='translate(40,20)'> <!-- container used to group objects; adjusting by right and top margin -->
 			<g class='x axis' transform='translate(0,350)'>
 				<line x1='0' y1='0' x2='540' y2='0'></line>
 			</g>
